== CHANGELOG ==
23/06/17:
 - Made some changes to accomodate update to pyqt5. Keep an eye out for any bugs this might introduce.
13/06/17:
 - Changed data / list writing from DataGUI such that:
        - If site order is changed in GUI, the data file is written to reflect the change.
        - If site order is changed, you are prompted to write out a list file as well as a data file.
        - Made the Popups clearer as to which is for data and which is for lists
        - GUI now properly appends the proper extention to the output file PRIOR to checking files existence (and hence will properly give overwrite warning)
28/04/17:
 - Added 'link axes' option (note this just sets the bounds the same for each plot)
??/??/??:
 - Added RMS table to data_plot GUI.
 - 
28/03/17:
 - Finished writing calculate_RMS for Dataset objects.
 - data_plot can now write plots to files. Saves figure at its current size, may need to be changed in the future.
08/03/17:
 - Added z-mesh generation to mesh_designer. Bulk changes to mesh (either in Z or XY) will result in the model being changed to a half-space if it wasn't already.
06/03/17:
 - Made mesh_designer callable as a script. Takes model and data file names as command line inputs.
 - Added 'sort_files' to utils, which goes through a given list of files and sorts them into a dictionary where the keys are file types (model, resp, data, lst)
02/03/17:
 - mesh_designer is more or less up and running. Changes to data_structures.Model to accomadate.
 - Fixed bug in compute_bost1D where comp was not being set if no argument was passed.
 - Changed bost1D script so that listfile is not needed.
 - Added a bit more to j2ws3d. Should be able to use it now, although still not tested.
 - Added most of the base functionality to mesh_designer. Can now save and revert progress, and write out model file.
 - Added GUI_common module that contains some of the common functions and classes used in the GUIs.
01/03/17: