@@ -39,13 +39,10 @@ data_plot.py:
     - Option to plot map in rotated or unrotated coordinates.
     - Give info on the misfit data. Don't want to have to keep going back to matlab to get info like RMS per component, station, period, etc.
 data_structures.py:
-    - Figure out how to properly add noise to the data
-    - Write wrapper functions in Data class for reset_errors and add_noise
+    - Going to need to keep making the changes to allow for ModEM and MARE2DEM data handling, specifically Rho and Phase data.
     -Rename some things to make it more clear
         - calculate_used_errors should probably be apply_error_floor
             - Speaking of which, this needs to be modified to handle data other than impedance and tipper
-    - write methods to add noise to data, and to reset errors to a percentage value. 
-        - Right now, calculate_used_errors takes the max of the current error and the error floor, but should have an option to just reset errors to error floor (mainly for synthetic data)
     - Need to take out the explicit references to 'ZXY', 'ZYX', etc.
         - Going to be a big overhaul to make the data structures work for all inversion types.
     - 2-D inversions with tipper might break, since TZXR/I won't be available, and some methods might expect it.
